--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-rest-framework==0.1.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 idna==3.4
+openpyxl==2.4.11
 pdfkit==1.0.0
 PyMySQL==1.0.3
 python-dateutil==2.8.2
